# reminder-aggregator

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  reminder_aggregator.py  requirements.txt
.github/: labeler.yml  release-drafter.yml
.github/workflows/: ci.yml  labeler.yml  release-drafter.yml  release-pypi.yml  release.yml
src/reminder_aggregator/: __main__.py  cli.py  scanner.py
