[project]
name = "reminder-aggregator"
version = "0.1.0"
description = "A simple cli application that aggregates codereminder tags like TODO, etc. in a report"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "pathspec==0.12.1",
    "pip==25.2",
]

[project.scripts]
reminder-aggregator = "reminder_aggregator.__main__:cli"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120
