[project]
name = "reminder-aggregator"
description = "A simple cli application that aggregates codereminder tags like TODO, etc. in a report"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0",
    "pathspec==0.12.1",
    "pip==25.2",
]
dynamic = ["version"]

[project.scripts]
reminder-aggregator = "reminder_aggregator.cli:cli"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
fallback-version = "0.0.0"
style = "semver"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]

[tool.pymarkdown]
plugins.line-length.enabled = false
plugins.md033.allowed_elements = "div" # Allow for centering using div
plugins.md041.enabled = false # First line is <div> when centering heading

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
]
